K8S/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: tindocker88/authservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 8080
      targetPort: 8080
